--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
   <nav id="visible" class="notvisi">
     <ol>
       <li><a href="/">Home</a></li>
-      <li><a href="/site.html?name=amazon">Amazon</a> </li>
-      <li><a href="/site.html?name=flipkart">Flipkart</a></li>
-      <li><a href="/site.html?name=ajio">Ajio</a></li>
-      <li><a href="/site.html?name=myntra">Myntra</a></li>
+      <li><a href="site.html?name=amazon">Amazon</a> </li>
+      <li><a href="site.html?name=flipkart">Flipkart</a></li>
+      <li><a href="site.html?name=ajio">Ajio</a></li>
+      <li><a href="site.html?name=myntra">Myntra</a></li>
     </ol>
   </nav>
   <div id="cat">
@@ -54,7 +54,7 @@
     arr.forEach(catname => {
       let upcatname = catname[0].toUpperCase() + catname.slice(1);
       console.log(upcatname)
-      let catdata = `<a href="/site.html?name=${catname}">${upcatname}</a>`
+      let catdata = `<a href="site.html?name=${catname}">${upcatname}</a>`
       cat.insertAdjacentHTML("beforeend", catdata);
 
       let main = document.getElementById('main');
@@ -82,7 +82,7 @@
     <div class="details">
       <p class="title">${contentval}</p>
       <p class="prc">${childdata["price"]}</p>
-      <button><a href="/details.html?site=${catname}&category=${category}&title=${title}&name=${contentval}">View Details</a></button>
+      <button><a href="details.html?site=${catname}&category=${category}&title=${title}&name=${contentval}">View Details</a></button>
     </div>
     
   </div>
