--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <nav id="visible" class="notvisi">
     <ol>
       <li><a href="/" title="Home">Home</a></li>
-      <li><a href="site.html?name=amazon" title="Amazon">Amazon</a> </li>
+      <li><a href="site?name=amazon" title="Amazon">Amazon</a> </li>
       <li><a href="site.html?name=flipkart" title="Flipkart">Flipkart</a></li>
       <li><a href="site.html?name=ajio" title="Ajio">Ajio</a></li>
       <li><a href="site.html?name=myntra" title="Myntra">Myntra</a></li>
