--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <ol>
       <li><a href="/" title="Home">Home</a></li>
       <li><a href="site?name=amazon" title="Amazon">Amazon</a> </li>
-      <li><a href="site.html?name=flipkart" title="Flipkart">Flipkart</a></li>
-      <li><a href="site.html?name=ajio" title="Ajio">Ajio</a></li>
-      <li><a href="site.html?name=myntra" title="Myntra">Myntra</a></li>
+      <li><a href="site?name=flipkart" title="Flipkart">Flipkart</a></li>
+      <li><a href="site?name=ajio" title="Ajio">Ajio</a></li>
+      <li><a href="site?name=myntra" title="Myntra">Myntra</a></li>
     </ol>
   </nav>
   <div id="cat">
@@ -52,11 +52,11 @@
 
     let cat = document.getElementById("cat");
     let arr = Object.keys(data['category']);
-    console.log(arr)
+    //console.log(arr)
     arr.forEach(catname => {
       let upcatname = catname[0].toUpperCase() + catname.slice(1);
       console.log(upcatname)
-      let catdata = `<a href="site.html?name=${catname}" title="${catname}">${upcatname}</a>`
+      let catdata = `<a href="site?name=${catname}" title="${catname}">${upcatname}</a>`
       cat.insertAdjacentHTML("beforeend", catdata);
 
       let main = document.getElementById('main');
@@ -77,7 +77,7 @@
         let ncategory=category.split(' ').join("+");
         let ntitle=title.split(' ').join("+");
         let ncontentval= contentval.split(' ').join("+");
-        console.log(title);
+        //console.log(title);
         let contenthtml = `
   <div class= "child">
     <div class="imgdiv">
@@ -86,7 +86,7 @@
     <div class="details">
       <p class="title">${contentval}</p>
       <p class="prc">${childdata["price"]}</p>
-      <button><a href="details.html?site=${catname}&category=${ncategory}&title=${ntitle}&name=${ncontentval}" title="View details of ${contentval}">View Details</a></button>
+      <button><a href="details?site=${catname}&category=${ncategory}&title=${ntitle}&name=${ncontentval}" title="View details of ${contentval}">View Details</a></button>
     </div>
     
   </div>
@@ -101,7 +101,7 @@
 
       
       main.appendChild(childin);
-      let sitelink = `<div class="sitelink"><a href="site.html?name=${catname}" title="See More from ${catname}">See More from ${upcatname}</a></div>`
+      let sitelink = `<div class="sitelink"><a href="site?name=${catname}" title="See More from ${catname}">See More from ${upcatname}</a></div>`
       main.insertAdjacentHTML("beforeend", sitelink);
 
     });
