--- a/details.html
+++ b/details.html
@@ -9,6 +9,7 @@
   <link rel="shortcut icon" href="icons/icon.webp" type="image/x-icon">
   <link rel="apple-touch-icon" href="icons/icon.webp">
   <title>Lowoncost</title>
+  
 </head>
 
 <body>
@@ -20,10 +21,10 @@
   <nav id="visible" class="notvisi">
     <ol>
       <li><a href="/" title="Home">Home</a></li>
-      <li><a href="site.html?name=amazon" title="Amazon">Amazon</a> </li>
-      <li><a href="site.html?name=flipkart" title="Flipkart">Flipkart</a></li>
-      <li><a href="site.html?name=ajio" title="Ajio">Ajio</a></li>
-      <li><a href="site.html?name=myntra" title="Myntra">Myntra</a></li>
+      <li><a href="site?name=amazon" title="Amazon">Amazon</a> </li>
+      <li><a href="site?name=flipkart" title="Flipkart">Flipkart</a></li>
+      <li><a href="site?name=ajio" title="Ajio">Ajio</a></li>
+      <li><a href="site?name=myntra" title="Myntra">Myntra</a></li>
     </ol>
   </nav>
 
@@ -49,7 +50,7 @@
   async function getdata() {
     let res = await fetch(`https://payme-bce76.firebaseio.com/deals/${sitename}/category/${category}/${title}/${name}.json`)
     let data = await res.json();
-    console.log(data)
+    //console.log(data)
 
     let main = document.getElementById('main');
     //let headertxt = `<h2>${title}</h2>`
@@ -146,7 +147,7 @@
     <div class="details">
       <p class="title">${contentval}</p>
       <p class="prc">${childdata["price"]}</p>
-      <button><a href="details.html?site=${sitename}&category=${lcat}&title=${lheadname}&name=${lcontentval}" title="View Details of ${contentval}">View Details</a></button>
+      <button><a href="details?site=${sitename}&category=${lcat}&title=${lheadname}&name=${lcontentval}" title="View Details of ${contentval}">View Details</a></button>
     </div>
     
   </div>
