--- a/details.html
+++ b/details.html
@@ -8,7 +8,8 @@
   <link rel="stylesheet" href="css/details.css">
   <link rel="shortcut icon" href="icons/icon.webp" type="image/x-icon">
   <link rel="apple-touch-icon" href="icons/icon.webp">
-  <title>Lowoncost</title>
+  <title>Lowoncost: Lowest priced product from famous sites</title>
+  <meta name="description" content="Best link to buy products from famous site . Just click on link and see the lowest priced products">
   
 </head>
 
