--- a/details.html
+++ b/details.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="css/details.css">
+  <link rel="stylesheet" href="css/style.css">
   <link rel="shortcut icon" href="icons/icon.webp" type="image/x-icon">
   <link rel="apple-touch-icon" href="icons/icon.webp">
   <title>Lowoncost: Lowest priced product from famous sites</title>
