--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <!-- inserting data dynamicly -->
   </div>
 
-  <h1>Lowoncost: Every product at lowest price</h1>
+  <h1 id="head">Shop Smarter with Lowoncost and save Money</h1>
 
   <div id="main">
 
