--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
   <link rel="shortcut icon" href="icons/icon.webp" type="image/x-icon">
   <link rel="apple-touch-icon" href="icons/icon.webp">
   <meta content='IN' name='country' />
+  <!-- ogtags.................................. -->
+  <meta property="og:type" content="offers" />
+  <meta property="og:url" content="https://lowoncost.xyz" />
+  <meta property="og:image" content="icons/icons.webp" />
 </head>
 
 <body>
