--- a/details.html
+++ b/details.html
@@ -80,8 +80,15 @@
   </a>
   </div>
   `
-  let childdetails = document.createElement('div')
-
+  
+  let insetdetails;
+  if(data["desc"] !== undefined){
+ insetdetails=`<h2 class="title"> Top best ${name} from ${sitename}</h2>
+    <span>${data["desc"]}</span>`;
+  }else{
+    insetdetails=``;
+  }
+let childdetails = document.createElement('div')
     childdetails.className = 'child_description';
   let details= `
   <div class= "child">
@@ -97,7 +104,7 @@
       <button><a href="site.html?name=ajio">Ajio</a></button>
       <button><a href="site.html?name=myntra">Myntra</a></button> -->
       
-      
+      ${insetdetails}
     </div>
   </div>
   
