--- a/details.html
+++ b/details.html
@@ -49,7 +49,7 @@
   let name = param.get('name');
 
   //seo for the site creation of meta and title tag
-  document.title = ` Lowest priced ${name} from ${sitename} `;
+  document.title = ` Grab the Deal on ${name} from ${sitename} `;
   let meta = document.querySelector('meta[name="description"]');
   meta.setAttribute("content", `Best link to buy ${name} from ${sitename} . Just click on link and see the lowest priced products`);
 
