--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Shop Smarter with Lowoncost and save Money</title>
-  <meta name="description" content="Find the lowest prices on the product you love with Lowoncost. Check prices on top retailers and save money">
+  <meta name="description" content="Find the lowest prices on the product you love with Lowoncost. Deals from every single category of Amazon, Flopkart, Myntra, Ajio and more">
   <meta name="keywords" content="save money, Top category from Ajio, Top category from Amazon, Top category from Flipkart, Top category from Myntra, deals, amaazon deals, flipkart deals, myntra deals, ajio offers">
   <link rel="stylesheet" href="css/style.css">
   <link rel="shortcut icon" href="icons/icon.webp" type="image/x-icon">
