--- a/details.html
+++ b/details.html
@@ -67,7 +67,7 @@
     let insetdetails;
 
   if(data["desc"] !== undefined){
- insetdetails=`<h2 class="title"> Top best ${name} from ${sitename}</h2>
+ insetdetails=`
     <span>${data["desc"]}</span>`;
   }else{
     insetdetails=``;
