--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       <li><a href="site?name=flipkart" title="Flipkart">Flipkart</a></li>
       <li><a href="site?name=ajio" title="Ajio">Ajio</a></li>
       <li><a href="site?name=myntra" title="Myntra">Myntra</a></li>
+      <li><a href="https://earbuzz.000webhostapp.com" title="Earbuzz">Earbuzz</a></li>
       <li><a href="https://product.lowoncost.xyz" title="Best Products">Best Products</a></li>
     </ol>
   </nav>
